--- a/src/app/core/sidebar/amenity-picker/amenity-picker.component.html
+++ b/src/app/core/sidebar/amenity-picker/amenity-picker.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3 class="title">{{ 'searchForAmenities' | translate }}</h3>
+  <h3 class="title">{{ 'showTheClosest' | translate }}</h3>
   <ul class="categories">
     <li *ngFor="let item of data" [class.active]="item.active" (click)="onFilterClick(item)">
       <div class="icon">
