--- a/src/app/core/sidebar/floor-picker/floor-picker.component.html
+++ b/src/app/core/sidebar/floor-picker/floor-picker.component.html
@@ -1,45 +1,11 @@
-<div class="container" [ngClass]="{ open: sidebarOpened }">
-  <h3 class="title">{{ "floor" | translate }}</h3>
-  <div class="selector">
-    <button class="current-floor" (click)="pickerOpened = !pickerOpened">
-      {{ stateService.state.floor.name }}
-      <fa-icon
-        [icon]="pickerOpened ? ['fal', 'chevron-up'] : ['fal', 'chevron-down']"
-      ></fa-icon>
-    </button>
-    <div class="floor-toggle">
-      <button
-        (click)="onFloorChange('down')"
-        aria-label="Floor Down"
-        title="Floor Down"
-      >
-        <fa-icon [icon]="['fal', 'chevron-left']" aria-hidden="true"></fa-icon>
-      </button>
-      <button
-        (click)="onFloorChange('up')"
-        aria-label="Floor Up"
-        title="Floor Up"
-      >
-        <fa-icon [icon]="['fal', 'chevron-right']" aria-hidden="true"></fa-icon>
-      </button>
-    </div>
-  </div>
-  <div class="picker" *ngIf="pickerOpened">
+<div class="container">
+  <div class="picker">
     <button
       *ngFor="let floor of stateService.state.floors"
       [ngClass]="{ active: floor.level === stateService.state.floor.level }"
       (click)="onFloorPick(floor)"
     >
-      {{ floor.name }}
+      {{ floor.name.length === 1 ? 'L'+floor.name : floor.name }}
     </button>
-  </div>
-  <div class="toggle" (click)="sidebarOpened = !sidebarOpened">
-    <fa-icon
-      [icon]="
-        sidebarOpened
-          ? ['fal', 'chevron-double-left']
-          : ['fal', 'chevron-double-right']
-      "
-    ></fa-icon>
   </div>
 </div>
