--- a/src/app/core/sidebar/search/search.component.scss
+++ b/src/app/core/sidebar/search/search.component.scss
@@ -148,6 +148,7 @@
     fa-icon {
       font-size: 12px;
       top: 28px;
+      z-index: 13;
       &.close-icon {
         right: 50px;
         top: 37px;
