Improve navigation experience with route details and QR codes
- Add a new string for "instructions" in the Finnish, English and Arabic localization files
- Update the sidebar component to show a route on the map
- Adjust the map padding for XSmall and other breakpoints
- Add QR code for directions in the details component
- Update the conditions for when the route details and steps are shown
- Update the title of the POI in the details component

[src/assets/i18n/fi.json]
- Add a new string for "instructions" in the Finnish localization
[src/app/core/sidebar/details/details.component.scss]
- Add a `small-viewport-only` class to the `details.component.scss`
- Change the `.toggle` display to `block` for the `small-viewport-only` class
- Change the `img` height to `auto` for the `open` class
- Change the `max-height` to `220px` for the `haveRoute` class
- Add a `distance` class to the `content` class for
[src/app/map/map.component.ts]
- Change map padding for XSmall breakpoint from `top: 50, bottom: 300, left: 50, right: 50` to `top: 0, bottom: 100, left: 0, right: 0`
- Change map padding for other breakpoints from `top: 250, bottom: 250, left: 450, right: 250`
[src/app/core/sidebar/sidebar.component.html]
- Add a new class to the main container when a route is being shown on the map
[src/assets/i18n/en.json]
- Add a new key `instructions` to the `en.json` file
[src/app/core/sidebar/sidebar.component.ts]
- Import `MapService`
- Add `MapService` to constructor
- Reverse the `filtersOpened` boolean
[src/assets/i18n/ar.json]
- Add the key `instructions` to the `ar.json` file
- Change the value of the `destination` key in the `ar.json` file
[src/app/core/sidebar/sidebar.component.scss]
- Add `haveRoute` class to sidebar component
- Hide `app-search`, `filters` and `toggle` when `haveRoute` is active
- Adjust top position of `app-floor-picker` container when `haveRoute` is active
[src/app/core/sidebar/details/details.component.ts]
- Change the conditions for when the route 

--- a/src/app/core/sidebar/details/details.component.scss
+++ b/src/app/core/sidebar/details/details.component.scss
@@ -49,6 +49,10 @@
     top: -20px;
     border-radius: 0 20px 0 0;
 
+    &.small-viewport-only {
+      display: none;
+    }
+
     &.header {
       padding-bottom: 0;
 
@@ -199,6 +203,19 @@
         }
       }
     }
+
+    &.small-viewport-only {
+      .accessible-toggle {
+        border: 2px solid $accent-color;
+        color: $accent-color;
+      }
+      &.accessibleOnly {
+        .accessible-toggle {
+          border: 2px solid $default-color;
+          color: $default-color;
+        }
+      }
+    }
   }
   .toggle {
     position: absolute;
@@ -275,25 +292,59 @@
     border-radius: 10px 10px 0 0;
     max-height: 100%;
 
-    &.haveRoute {
-      max-height: 35%;
-      .toggle {
-        display: block;
-        left: calc(50% - 18px);
+    .toggle {
+      display: block;
+      left: calc(50% - 18px);
+    }
+
+    .img-holder {
+      img {
+        height: 0;
       }
+    }
+
+    .content {
+      &.large-viewport-only {
+        display: none;
+      }
+      &.small-viewport-only {
+        display: block;
+      }
+      >p {
+        display: none;
+      }
+      .open-hours {
+        display: none;
+      }
+    }
+
+    &.open {
+      max-height: 100%;
       .img-holder {
         img {
-          height: 0;
+          height: auto;
         }
       }
       .content {
+        >p {
+          display: block;
+        }
+        .open-hours {
+          display: none;
+        }
+      }
+    }
+
+    &.haveRoute {
+      max-height: 220px;
+      .content {
+        .distance {
+          display: block;
+        }
         .qr-code {
           display: none;
         }
         .show-route {
-          display: none;
-        }
-        >p {
           display: none;
         }
       }
@@ -303,9 +354,6 @@
           img {
             height: auto;
           }
-        }
-        .content p {
-          display: block;
         }
         .content .qr-code {
           right: .5rem;
