--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<main class="container" [ngClass]="{ open: filtersOpened }">
+<main class="container" [ngClass]="{ open: filtersOpened, haveRoute: mapService.showingRoute}">
   <div class="brand">
     <img src="assets/images/MOE_logo_triangle.png" alt="Mall of Emirates" />
   </div>
