--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -126,6 +126,21 @@
         top: 94px;
       }
     }
+
+    &.haveRoute {
+      padding: 0;
+      min-height: 0;
+      app-search,
+      .filters,
+      .toggle {
+        display: none !important;
+      }
+      ::ng-deep app-floor-picker {
+        .container {
+          top: 20px;
+        }
+      }
+    }
   }
   .filters {
     position: static;
