--- a/src/app/core/sidebar/details/details.component.scss
+++ b/src/app/core/sidebar/details/details.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/variables';
+@import "../../../../styles/variables";
 
 .container {
   background-color: rgba(255 255 255 / 100%);
@@ -8,7 +8,7 @@
   position: absolute;
   left: 0;
   top: 110px;
-  transition: all .25s linear;
+  transition: all 0.25s linear;
   min-height: 143px;
   z-index: 4;
   max-height: calc(100vh - 110px);
@@ -28,7 +28,7 @@
     background: $default-color;
     border: 0;
     border-radius: 15px;
-    padding: .5rem .8rem;
+    padding: 0.5rem 0.8rem;
     font-size: 20px;
     z-index: 4;
     &:hover {
@@ -57,10 +57,15 @@
       padding-bottom: 0;
 
       .qr-code {
-        position: absolute;
-        top: 1rem;
-        right: 1rem;
-        z-index: 5;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        p {
+          color: $default-color;
+          font-weight: 600;
+          font-size: 20px;
+          padding-left: 1.5rem;
+        }
       }
     }
 
@@ -93,7 +98,7 @@
     .open-hours {
       color: $default-color;
       margin-bottom: 0;
-      font-weight: 400
+      font-weight: 400;
     }
 
     h4 {
@@ -105,7 +110,7 @@
     p {
       font-weight: 300;
       font-size: 14px;
-      letter-spacing: .5px;
+      letter-spacing: 0.5px;
 
       a {
         display: block;
@@ -125,22 +130,22 @@
     .show-route {
       display: block;
       width: 100%;
-      margin-bottom: .5rem;
+      margin-bottom: 0.5rem;
       cursor: pointer;
       background: white;
       text-align: center;
       border-radius: 5px;
       font-weight: 500;
-      padding: .5rem;
+      padding: 0.5rem;
       outline: 0;
-      transition: all .25s linear;
+      transition: all 0.25s linear;
 
       fa-icon {
-        margin-right: .5rem;
+        margin-right: 0.5rem;
       }
 
       &:hover {
-        opacity: .7;
+        opacity: 0.7;
         transform: scale(1.05);
       }
     }
@@ -158,7 +163,6 @@
       background-color: $default-color;
       color: white;
     }
-
 
     .mat-expansion-panel ::ng-deep {
       box-shadow: none;
@@ -222,7 +226,7 @@
     display: none;
     font-size: 30px;
     color: $default-color;
-    padding: .5rem;
+    padding: 0.5rem;
     cursor: pointer;
     transform: rotate(-90deg);
     z-index: 6;
@@ -250,7 +254,7 @@
       display: flex;
       gap: 10px;
       margin-bottom: 1rem;
-      >button {
+      > button {
         flex: auto;
         text-align: center;
         background-color: $default-color;
@@ -258,7 +262,7 @@
         border-radius: 6px;
         max-width: 120px;
         border: 0;
-        padding: .5rem;
+        padding: 0.5rem;
 
         &:hover {
           background-color: darken($default-color, 15%);
@@ -310,7 +314,7 @@
       &.small-viewport-only {
         display: block;
       }
-      >p {
+      > p {
         display: none;
       }
       .open-hours {
@@ -326,7 +330,7 @@
         }
       }
       .content {
-        >p {
+        > p {
           display: block;
         }
         .open-hours {
@@ -356,14 +360,14 @@
           }
         }
         .content .qr-code {
-          right: .5rem;
+          right: 0.5rem;
         }
       }
     }
     .start-box {
       font-size: 12px;
       .buttons {
-        >button {
+        > button {
           font-size: 12px;
           max-width: 80px;
           img {
