--- a/src/app/core/sidebar/details/details.component.scss
+++ b/src/app/core/sidebar/details/details.component.scss
@@ -295,6 +295,7 @@
     margin-bottom: 0;
     border-radius: 10px 10px 0 0;
     max-height: 100%;
+    z-index: 16;
 
     .toggle {
       display: block;
@@ -340,7 +341,7 @@
     }
 
     &.haveRoute {
-      max-height: 220px;
+      max-height: 245px;
       .content {
         .distance {
           display: block;
