--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div [class]="'theme-wrapper ' + theme$">
+<div [class]="'theme-wrapper ' + theme$ + ' ' + translate.currentLang">
   <main class="content">
     <app-sidebar></app-sidebar>
     <app-map></app-map>
